insert do Sprzedazy

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -67,9 +67,12 @@
         </div>
     </div>
 </div>
-<!-- jednak działa -->
+
 <div align="center">
+
     <h1>Tabela sprzedaży</h1>
+    <br>
+    <a href="/new">Wprowadź nową sprzedaż</a>
 
     <table border="1" cellpadding="10">
 
