--- a/src/main/resources/templates/admin/main_admin.html
+++ b/src/main/resources/templates/admin/main_admin.html
@@ -55,6 +55,10 @@
 
                 <button class="btn btn-primary" type="submit" onclick="successfullyLogout()" value="Sign Out">Logout
                 </button>
+                <br>
+                <form action="/new_">
+                    <input type="submit" value="Dodaj sprzedaż" />
+                </form>
             </form>
         </div>
 
