dopisany kod do końca rozdziału 11. ale edycja nie działa,  za to test jednostkowy działa => metoda update poprawna, ale dostęp do edit_form.html chyba już nie

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -94,7 +94,7 @@
             <td th:text="${sprzedaz.NR_SAMOCHODU}">NR_SAMOCHODU</td>
             <td th:text="${sprzedaz.NR_KLIENTA}">NR_KLIENTA</td>
             <td>
-                <a th:href="@{/edit/{data_sprzedazy}(id=${sprzedaz.DATA_SPRZEDAZY})}">Edytuj</a>
+                <a th:href="@{'/edit/' + ${sprzedaz.DATA_SPRZEDAZY}}">Edytuj</a>
             </td>
         </tr>
         </tbody>
