--- a/src/main/resources/templates/new_form.html
+++ b/src/main/resources/templates/new_form.html
@@ -27,7 +27,7 @@
         <td><input type="number" th:field="*{NR_KLIENTA}"/></td>
       </tr>
       <tr>
-        <td colspan="2"><input type="submit" value="Zapisz"/></td>
+        <td colspan="2"><button type="submit">Zapisz</button></td>
       </tr>
 
 
