--- a/src/main/resources/templates/edit_form.html
+++ b/src/main/resources/templates/edit_form.html
@@ -8,7 +8,7 @@
 <div align="center">
   <h1>Edycja sprzedaży</h1>
   <br>
-  <form action="#" th:action="@/{update}" th:object="${sprzedaz}" method="post">
+  <form action="#" th:action="@{/update}" th:object="${sprzedaz}" method="post">
     <table border="1" cellpadding="10">
       <tr>
         <td>Data sprzedaży:</td>
@@ -27,7 +27,7 @@
         <td><input type="number" th:field="*{NR_KLIENTA}"/></td>
       </tr>
       <tr>
-        <td colspan="2"><input type="submit" value="Zapisz"/></td>
+        <td colspan="2"><button type="submit">Zapisz</button></td>
       </tr>
     </table>
   </form>
