--- a/src/main/resources/templates/edit_form.html
+++ b/src/main/resources/templates/edit_form.html
@@ -12,7 +12,7 @@
     <table border="1" cellpadding="10">
       <tr>
         <td>Data sprzedaży:</td>
-        <td><input type="date" th:field="*{DATA_SPRZEDAZY}" readonly="readonly"/></td>
+        <td><input type="datetime-local" th:field="*{DATA_SPRZEDAZY}" readonly="readonly"/></td>
       </tr>
       <tr>
         <td>Nr pracownika:</td>
