--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -95,6 +95,8 @@
             <td th:text="${sprzedaz.NR_KLIENTA}">NR_KLIENTA</td>
             <td>
                 <a th:href="@{'/edit/' + ${sprzedaz.DATA_SPRZEDAZY}}">Edytuj</a>
+                &nbsp;&nbsp;&nbsp;&nbsp;
+                <a th:href="@{'/delete/' + ${sprzedaz.DATA_SPRZEDAZY}}">Usuń</a>
             </td>
         </tr>
         </tbody>
