--- a/src/main/resources/templates/new_form.html
+++ b/src/main/resources/templates/new_form.html
@@ -12,7 +12,7 @@
     <table border="1" cellpadding="10">
       <tr>
         <td>Data sprzedaży</td>
-        <td><input type="datetime-local" th:field="*{DATA_SPRZEDAZY}"/></td>
+        <td><input type="text" th:field="*{DATA_SPRZEDAZY}"/></td>
       </tr>
       <tr>
         <td>Nr pracownika</td>
