Nadanie nazwy salonu

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
-        <a class="navbar-brand" href="/">BDBT Spring Boot Project - Part II</a>
+        <a class="navbar-brand" href="/">Salon samochodowy Adama i Radka</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation">
@@ -49,6 +49,9 @@
         </div>
     </div>
 </nav>
+<!--div class="text-center"> -->
+    <!--img src="https://www.oto-samochody.pl/wp-content/uploads/2018/05/l20131210145257.jpg"  class="embed-responsive embed-responsive-16by9" alt="..."> -->
+<!--/div> -->
 
 
 <!--Using images in page    -->
@@ -67,6 +70,11 @@
         </div>
     </div>
 </div>
+
+
+<br>
+<hr size="5">
+<br>
 
 <div align="center">
 
