--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="pl" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>Welcome Page</title>
+    <title>Salon samochodowy Adama i Radka</title>
 
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} "/>
 
@@ -62,9 +62,8 @@
     <div class="row">
         <div class="col-md-10 mt-5">
 
-            <label style="font-size:30px">Welcome to the home page!</label>
-            <div style="font-size:20px">If you want to login, click <a th:href="@{/main}"><b>here</b></a> or in the
-                upper right corner.
+            <label style="font-size:30px">Witamy w naszym salonie samochodowym!</label>
+            <div style="font-size:20px">Aby się zalogować, kliknij <a th:href="@{/main}"><b>tutaj</b></a>, albo w prawym górnym rogu.</div>
             </div>
 
         </div>
@@ -80,7 +79,6 @@
 
     <h1>Tabela sprzedaży</h1>
     <br><br>
-    <a href="/new">Wprowadź nową sprzedaż</a>
 
     <table border="1" cellpadding="10">
 
