--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -2,7 +2,7 @@
 <html lang="pl" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>Main Page</title>
+    <title>Strona główna</title>
 
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} "/>
 
@@ -63,10 +63,10 @@
                 <form method="post" th:action="@{/index}">
                 <div class="form-group">
                     <label th:inline="text">Welcome <a style="color:lightskyblue; text-transform:capitalize"><b>[[${#httpServletRequest.remoteUser}]]</b></a> to the main page!</label>
-                    <div>If you want to logout, click "Logout" button under this text.</div>
+                    <div>Aby się wylogować, kliknij przycisk "Wyloguj" poniżej.</div>
                 </div>
 
-                <button class="btn btn-primary" type="submit" onclick="successfullyLogout()" value="Sign Out">Logout</button>
+                <button class="btn btn-primary" type="submit" onclick="successfullyLogout()" value="Wyloguj">Logout</button>
             </form>
         </div>
 
