--- a/src/main/resources/templates/errors/404.html
+++ b/src/main/resources/templates/errors/404.html
@@ -23,7 +23,7 @@
             <form method="post" th:action="@{/index}">
                 <div class="form-group">
                     <div><b><p style="font-size:30px">Error</p></b></div>
-                    <div><p style="font-size:24px">404 - Page not found<</p></div>
+                    <div><p style="font-size:24px">404 - Page not found</p></div>
                 </div>
                 <button class="btn btn-primary" type="submit" value="Sign In">Back to home page</button>
             </form>
