--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -79,6 +79,7 @@
 
     <h1>Tabela sprzedaży</h1>
     <br><br>
+    <a href="/new">Wprowadź nową sprzedaż</a>
 
     <table border="1" cellpadding="10">
 
